--- a/JavaScript30-master/12 - Key Sequence Detection/index-START.html
+++ b/JavaScript30-master/12 - Key Sequence Detection/index-START.html
@@ -6,7 +6,26 @@
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </head>
 <body>
+
 <script>
+
+  const pressed = [];
+  const secretCode = 'poop';
+
+  window.addEventListener('keyup', (e) => {
+    pressed.push(e.key);
+
+    //start counting from the back and only allow the maximum length of the secret code
+    pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+
+    if(pressed.join('').includes(secretCode)){
+      console.log("You did it!");
+      cornify_add();
+    }
+
+    console.log(pressed);
+  })
 </script>
+
 </body>
 </html>
